# tc

./: .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  NVDA测试指南.md  PRD_无障碍AI教学平台.md  README.md  TEST_PLAN.md  demo.html  index.html  main.py  package-lock.json  package.json  pyproject.toml  snake.html  start-all.js  stt_api_service.py  test-api.html  test_whisper.py  tsconfig.json  启动-bilibili分析服务.bat  启动平台.bat  启动指南.md  启动服务器.bat
.claude/: settings.local.json
.kiro/steering/: product.md  structure.md  tech.md
.kiro/templates/: action-plan.md  feature-status.md  issue-report.md
docs/: BILITEXT集成.md
docs/plan/: todo.md
server/: .env.example  .env.txt  package-lock.json  package.json  requirements.txt
src/: App.tsx
src/components/: AccessibilityDemo.css  AccessibilityDemo.tsx  AccessibleImageSelection.tsx  AssignmentForm.css  AssignmentForm.tsx  AssignmentList.css  AssignmentList.tsx  FileUpload.css  FileUpload.tsx  GlossaryPanel.css  GlossaryPanel.tsx  ImageComparison.tsx  ImageComponents.css  ImageDifferenceDescription.tsx  ImageGallery.tsx  OverlaySubtitle.css  OverlaySubtitle.tsx  ProtectedRoute.tsx  ScreenReaderControl.css  SmartReader.css  SmartReader.tsx  VideoImport.css  VideoImport.tsx  VideoList.css  VideoList.tsx  VideoPlayer.css  VideoPlayer.tsx  VideoSummary.css  VideoSummary.tsx
src/pages/: AccessibilitySelection.css  Assignment.css  (+15 more)
whis-test/: STT修复指南.md
whisper-test/: .gitignore  CUDA诊断报告.md  DIAGNOSIS_REPORT.md  README.md  generate_test_audio.py  test_frontend_backend_flow.js  test_stt_service.py  test_subtitle_rendering.html
(+9 files in other folders)
